<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button_usd"
        android:layout_width="249dp"
        android:layout_height="45dp"
        android:text="@string/rupiah_ke_dollar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        app:layout_constraintVertical_bias="0.086" />

    <Button
        android:id="@+id/button_euro"
        android:layout_width="249dp"
        android:layout_height="45dp"
        android:text="@string/rupiah_ke_euro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_usd"
        app:layout_constraintVertical_bias="0.04000002" />

    <Button
        android:id="@+id/button_gbp"
        android:layout_width="249dp"
        android:layout_height="45dp"
        android:text="@string/rupiah_ke_pounds"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_euro"
        app:layout_constraintVertical_bias="0.060000002" />

    <Button
        android:id="@+id/button_myr"
        android:layout_width="249dp"
        android:layout_height="45dp"
        android:text="@string/rupiah_ke_ringgit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_gbp"
        app:layout_constraintVertical_bias="0.060000002" />

    <Button
        android:id="@+id/button_jpy"
        android:layout_width="249dp"
        android:layout_height="45dp"
        android:text="@string/rupiah_ke_yen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_myr"
        app:layout_constraintVertical_bias="0.04000002" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="107dp"
        android:layout_height="97dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.151"
        app:srcCompat="@drawable/money"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/nilai_tukar_mata_uang"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.033" />


</androidx.constraintlayout.widget.ConstraintLayout>